--- a/gb/20/2/18/n11878516.md
+++ b/gb/20/2/18/n11878516.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rgtkqo2398/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rgtkqo2398/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>李文亮就职医院230医护和3副院长染病</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/GettyImages-1199162816-1-600x400.jpg" />
 <h6>图为武汉市中心医院眼科医生李文亮于2月7日病逝，多位市民来到这位“疫情吹哨人”所在的医院献花悼念。(Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年02月19日讯】在<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E5%B8%82%E4%B8%AD%E5%BF%83%E5%8C%BB%E9%99%A2.md">武汉市中心医院</a>的职工中，已确诊感染<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E6%96%B0%E5%9E%8B%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md">新型冠状病毒</a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E8%82%BA%E7%82%8E.md">肺炎</a>的目前有230多人，多名科室主任与院领导均“中招”。然而，该院领导在疫情初期曾对传播真相的医务人员下达“封杀令”。此后，该医院接收到的发热患者愈发增多。</p>
-<p><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E5%B8%82%E4%B8%AD%E5%BF%83%E5%8C%BB%E9%99%A2.md">武汉市中心医院</a>是当地27家三级甲等医院之一，该院主要有后湖和南京路两个院区，其中后湖院区距离华南海鲜市场不到两公里，这也是武汉市中心医院较早接触到新冠<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E8%82%BA%E7%82%8E.md">肺炎</a>病例的重要原因。</p>
+<p>【大纪元2020年02月19日讯】在<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E5%B8%82%E4%B8%AD%E5%BF%83%E5%8C%BB%E9%99%A2.md#1">武汉市中心医院</a>的职工中，已确诊感染<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%9E%8B%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md#1">新型冠状病毒</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%82%BA%E7%82%8E.md#1">肺炎</a>的目前有230多人，多名科室主任与院领导均“中招”。然而，该院领导在疫情初期曾对传播真相的医务人员下达“封杀令”。此后，该医院接收到的发热患者愈发增多。</p>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E5%B8%82%E4%B8%AD%E5%BF%83%E5%8C%BB%E9%99%A2.md#1">武汉市中心医院</a>是当地27家三级甲等医院之一，该院主要有后湖和南京路两个院区，其中后湖院区距离华南海鲜市场不到两公里，这也是武汉市中心医院较早接触到新冠<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%82%BA%E7%82%8E.md#1">肺炎</a>病例的重要原因。</p>
 <p>《中国新闻周刊》2月18日报导，据该院急诊科主任艾芬介绍，2019年12月18日，一名65岁的华南海鲜市场送货员来看急诊，该男子五天前出现发热症状。</p>
 <p>12月27日，艾芬接诊了第二例此类病人，看到化验单上标注有“SARS冠状病毒”字样，艾芬感到“很可怕”。</p>
-<p>这份检测报告，于12月30日下午被该院眼科医生<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E6%9D%8E%E6%96%87%E4%BA%AE.md">李文亮</a>发在同学微信群里，并被大量转发。艾芬称，当时大学同学私下问她关于冠状病毒的消息，她就把检测报告发了过去，并特别用红圈对“SARS冠状病毒”进行了标注，但不知这份报告后来是怎样流出去的。</p>
+<p>这份检测报告，于12月30日下午被该院眼科医生<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%8E%E6%96%87%E4%BA%AE.md#1">李文亮</a>发在同学微信群里，并被大量转发。艾芬称，当时大学同学私下问她关于冠状病毒的消息，她就把检测报告发了过去，并特别用红圈对“SARS冠状病毒”进行了标注，但不知这份报告后来是怎样流出去的。</p>
 <p>12月29日，艾芬所在的急诊科向医院公共卫生科上报了这7例发热病人中急诊科收治的4例。艾芬当时就推断，这个病可能“人传人”。</p>
-<p>武汉市卫健委于12月31日通报了27例“不明原因病毒性肺炎”的相关情况，称到目前为止未发现明显人传人现象，未发现医务人员感染。就在这天凌晨，<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E6%9D%8E%E6%96%87%E4%BA%AE.md">李文亮</a>受到了市卫健委和医院的警告和批评。1月1日，武汉市公安局发布通报，称有8人因“发布、转发不实消息”而遭传唤。</p>
+<p>武汉市卫健委于12月31日通报了27例“不明原因病毒性肺炎”的相关情况，称到目前为止未发现明显人传人现象，未发现医务人员感染。就在这天凌晨，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%8E%E6%96%87%E4%BA%AE.md#1">李文亮</a>受到了市卫健委和医院的警告和批评。1月1日，武汉市公安局发布通报，称有8人因“发布、转发不实消息”而遭传唤。</p>
 <p>1月2日，艾芬到医院监察科纪委接受谈话，领导批评她“造谣生事”，指其行为将导致社会恐慌，影响武汉市发展。艾芬提及了这个病可以人传人，但没有获得任何回应。医方要求医务人员之间不许公开谈及病情，不得通过文字、图片等可能留存证据的方式谈论病情，病情只能在交接班必要的时候口头提及。</p>
 <p>自1月1日之后，武汉市中心医院接收到的发热患者愈发增多，像“火山喷发”一样。到1月的第二周，随着疫情发展病人越来越多。</p>
 <p>据了解，武汉市中心医院感染新冠病毒的医护人员遍布各个科室，其中不少是科室主任。此外，被感染的还有该医的三位副院长，其中一位副院长病情较重。</p>
@@ -22,48 +22,53 @@
 <p>其中一份文件显示，中共海军工程大学警通勤务连1月2日下发“关于实施防控不明原因肺炎、严控外来人员进校的通知”，中共海军曾于去年就武汉肺炎疫情出台了“2019”298号防控文件，而且中部战区总医院也已知情。显然，中共高层早已知晓此次疫情具有传染性，并开始在内部采取预防措施，而大多数民众还被蒙在鼓里。</p>
 <p>武汉市长周先旺曾在1月27日接受中共央视采访时称，在舆情方面，各方面对武汉市信息的披露是不满意的，他承认武汉市披露信息不及时。但他解释称，“作为地方政府，我获得这个信息以后，授权以后，我才能披露&#8230;&#8230;”</p>
 <p>外媒普遍认为，周先旺的讲话意在“甩锅”，把隐瞒不报疫情的责任推给中共当局——不是武汉市隐匿疫情，而是中共中央不授权。</p>
-<p style="text-align: center;"><div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://git.io/Jv45D"><img width="600" src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/oymJi84v7Vk?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+<p style="text-align: center;"><div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://git.io/Jv45D"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/oymJi84v7Vk?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 	</div></p>
 <p>责任编辑：李净#</p>
 
 <hr>
-
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/18/n11878516.htm">李文亮就职医院230医护和3副院长染病</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11875875.htm">武昌医院院长死于新冠肺炎 大批医护感染</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11873631.htm">陆客：中共制造人祸灾难 为何却在国内得到吹捧</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11870054.htm">【一线采访】武汉5名护工染疫 被迫流落街头</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/13/n11867107.htm">武汉医生：冤魂太多 夜空满是他们的哭喊</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11854613.htm">夏小强：关于李文亮之死的惊人传闻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851958.htm">【拍案惊奇】李文亮死后被抢救 武汉方舱真相</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850690.htm">【十字路口】李文亮病逝 武汉肺炎致七大危机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850762.htm">陈思敏：李文亮“遗言”透死因 中共不容人民讲真话</a></li>
-> <li><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/20/2/4/n11844943.md">中国富豪举报：武汉病毒所是新冠病毒祸源</a></li>
-> <li><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/20/2/15/n11871584.md">武汉人怒吼：不想再沉默 要反抗邪恶政权</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎死亡惊人 武汉日烧百具死尸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853323.htm">【独家】一天烧百具尸体 殡仪馆员怒斥狗官</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852540.htm">政治局常委会要求落空 新医学专家否定老专家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854313.htm">湖北省高层异动 习近平开始“动刀子”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11833429.htm">乌鸦满天飞 预兆什么灾？如何消解？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11836330.htm">孝女感动神仙  孝心精诚穿越时空得护祐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852868.htm">李文亮去世 中共舆情分析报告网络曝光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851944.htm">陈秋实武汉失联 疑遭强制隔离 母亲求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850310.htm">【疫情最前线】武汉实验室抢专利不慎泄密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850690.htm">【十字路口】李文亮病逝 武汉肺炎致七大危机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852281.htm">【罗厨寻味】年菜系列之六：煎酿鲈鱼</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850022.htm">【胡乃文开讲】抗武汉肺炎 提升免疫力是关键！中医防疫3招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852148.htm">悼预警武汉肺炎医生 章子怡怒斥警方“耻辱”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849645.htm">痛斥林郑限制佩戴口罩 关淑怡：施政似武则天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩明一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852560.htm">被疑撑香港医护罢工 郭富城声明账号被盗用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850031.htm">儿子滑雪意外受伤 袁咏仪：这个年过得不容易</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rgtkqo2398/djy/blob/master/gb/20/2/18/n11878516.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rgtkqo2398/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rgtkqo2398/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/17/n11875875.md#1">武昌医院院长死于新冠肺炎 大批医护感染</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/16/n11873631.md#1">陆客：中共制造人祸灾难 为何却在国内得到吹捧</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/14/n11870054.md#1">【一线采访】武汉5名护工染疫 被迫流落街头</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/13/n11867107.md#1">武汉医生：冤魂太多 夜空满是他们的哭喊</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/9/n11854613.md#1">夏小强：关于李文亮之死的惊人传闻</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/7/n11851958.md#1">【拍案惊奇】李文亮死后被抢救 武汉方舱真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/7/n11850690.md#1">【十字路口】李文亮病逝 武汉肺炎致七大危机</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/7/n11850762.md#1">陈思敏：李文亮“遗言”透死因 中共不容人民讲真话</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/4/n11844943.md#1">中国富豪举报：武汉病毒所是新冠病毒祸源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/15/n11871584.md#1">武汉人怒吼：不想再沉默 要反抗邪恶政权</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">古玉文：红谍郭汝瑰不忘初心 助共为虐食苦果</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/5/n10364709.md#1" target="_blank">修炼法轮功的中共军官们控告江泽民</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/18/n11878516.htm">李文亮就职医院230医护和3副院长染病</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/18/n11878516.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
